[package]
name         = "signal-router"
version      = "0.6.1"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-router"
description  = "Signal contract for Persona router observations and relations."
publish      = false
links        = "signal-router"
build        = "build.rs"

[lib]
name = "signal_router"
path = "src/lib.rs"

[features]
default = []
nota-text = ["dep:nota", "signal-frame/nota-text"]

[dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", rev = "ce7c564de0a0518eaa1938d55dccc460a67cadb4", optional = true }
rkyv        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", rev = "91e675298b79ec2aab2e0714a5e3e5b2d6d07339", default-features = false }
thiserror   = "2"

[build-dependencies]
# This build-only compatibility generator preserves the checked-in wire artifact; runtime dependencies are pinned above.
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", rev = "31a9ae1982dc834a31ba2e8d662e71f360e8536c" }

[dev-dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", rev = "ce7c564de0a0518eaa1938d55dccc460a67cadb4" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
